[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/NotificationBox/NotificationBox.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Robot/RobotoSlab-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[node name="NotifBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.376471, 0.294118, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tweens" type="Node" parent="."]

[node name="T_modulate_visbility" type="Tween" parent="Tweens"]

[node name="T_modulate_text" type="Tween" parent="Tweens"]

[node name="Timers" type="Node" parent="."]

[node name="Timer_Visbility" type="Timer" parent="Timers"]
[connection signal="Notify" from="." to="." method="_on_NotifBox_Notify"]
[connection signal="tween_completed" from="Tweens/T_modulate_visbility" to="." method="_on_T_modulate_visbility_tween_completed"]
[connection signal="timeout" from="Timers/Timer_Visbility" to="." method="_on_Timer_Visbility_timeout"]
